test/expectedOutputs/applications/testapp1.dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp1
  namespace: testapp1
spec:
  selector:
    app: testapp1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
